--- a/style/css/main.css
+++ b/style/css/main.css
@@ -13,6 +13,13 @@ main .board-row .board-block {
   width: 19.2%;
   height: 70px;
   border: 3px solid #ddd;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 main .board-row .board-block:last-child {
   gap: 0;
