--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -11,6 +11,13 @@ main {
       width: calc(96% / 5);
       height: 70px;
       border: 3px solid #ddd;
+      background: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 26px;
+      font-weight: bold;
+      text-transform: uppercase;
       &:last-child {
         gap: 0;
       }
